# lianmengskill

./: .env.example  .gitignore  INSTALL.md  README.md  main.py  pyproject.toml  pytest.ini  todo.md
browser_extension/: background.js  cashbackmonitor_extractor.js  content.js  grok_tab_manager.js  manifest.json  panel.js  popup.html  popup.js  sidepanel.css  sidepanel.html  simplycodes_extractor.js  styles.css  ws_connection_manager.js
browser_extension/icons/: README.md
grok_service/: __init__.py  crud.py  database.py  main.py  models.py  websocket.py
tests/: __init__.py
